* added convenience methods (ArangoCollection.getIndex(String), .deleteIndex(key))
* fixed exception handling in Connection (issue #110)
* added connection pooling (issue #103)
* extracted VelocyPack implementation to https://github.com/arangodb/java-velocypack
* added dependency java-velocypack-module-jdk8

v4.1.10 (2017-02-22)
---------------------------
* changed velocystream message sending to async
* changed return value of getVertex/getEdge to null if not exists
* added support for multiple hosts as fallbacks
* added support serializing collections with null elements
* added support serializing non-generic classes that extend collections
* added support serializing/deserializing byte and Byte
* added default value "root" for user
* fixed serialization of additionalFields for objects and maps
* fixed VPack parsing (arrays of specific length)

v4.1.9 (2017-02-10)
---------------------------
* added missing IndexType.edge
* fixed URI encoding

v4.1.8 (2017-02-03)
---------------------------
* changed java.util.Date serialization from VPack.date to VPack.string (ISO 8601)
* changed java.sql.Date serialization from VPack.date to VPack.string (ISO 8601)
* changed java.sql.Timestamp serialization from VPack.date to VPack.string (ISO 8601)
* changed java.java.time.Instant serialization from VPack.date to VPack.string (ISO 8601)
* changed java.java.time.LocalDate serialization from VPack.date to VPack.string (ISO 8601)
* changed java.java.time.LocalDateTime serialization from VPack.date to VPack.string (ISO 8601)
* added byte[] de-/serialization from/to VPack.string (Base64)
* added ArangoCollection.drop(isSystem)
* improved ArangoDBException with responseCode, errorNum, errorMessage
* changed ArangoCollection.deleteDocuments() to work with keys and documents
* fixed URL encoding bug (#97)
* fixed update/replaceDocumets with Json (#98)

v4.1.7 (2017-01-26)
---------------------------
* fixed importDocuments, insertDocuments to work with raw Jsons (issue #91)
