@@ -41,6 +41,9 @@ import com.arangodb.internal.CollectionCache;
 import com.arangodb.internal.CollectionCache.DBAccess;
 import com.arangodb.internal.DocumentCache;
 import com.arangodb.internal.InternalArangoDB;
+import com.arangodb.internal.util.ArangoDeserializerImpl;
+import com.arangodb.internal.util.ArangoSerializerImpl;
+import com.arangodb.internal.util.ArangoUtilImpl;
 import com.arangodb.internal.velocypack.VPackDriverModule;
 import com.arangodb.internal.velocystream.Communication;
 import com.arangodb.internal.velocystream.CommunicationAsync;
@@ -53,6 +56,9 @@ import com.arangodb.internal.velocystream.HostHandler;
 import com.arangodb.model.LogOptions;
 import com.arangodb.model.UserCreateOptions;
 import com.arangodb.model.UserUpdateOptions;
+import com.arangodb.util.ArangoDeserializer;
+import com.arangodb.util.ArangoSerializer;
+import com.arangodb.util.ArangoUtil;
 import com.arangodb.velocypack.VPack;
 import com.arangodb.velocypack.VPackAnnotationFieldFilter;
 import com.arangodb.velocypack.VPackAnnotationFieldNaming;
@@ -87,15 +93,17 @@ public class ArangoDBAsync extends InternalArangoDB<ArangoExecutorAsync, Complet
 		private Integer maxConnections;
 		private final VPack.Builder vpackBuilder;
 		private final CollectionCache collectionCache;
-		private final VPackParser.Builder vpackParser;
+		private final VPackParser.Builder vpackParserBuilder;
+		private ArangoSerializer serializer;
+		private ArangoDeserializer deserializer;
 
 		public Builder() {
 			super();
 			vpackBuilder = new VPack.Builder();
 			collectionCache = new CollectionCache();
-			vpackParser = new VPackParser.Builder();
+			vpackParserBuilder = new VPackParser.Builder();
 			vpackBuilder.registerModule(new VPackDriverModule(collectionCache));
-			vpackParser.registerModule(new VPackDriverModule(collectionCache));
+			vpackParserBuilder.registerModule(new VPackDriverModule(collectionCache));
 			vpackBuilder.registerModule(new VPackJdk8Module());
 			host = new Host(ArangoDBConstants.DEFAULT_HOST, ArangoDBConstants.DEFAULT_PORT);
 			hosts = new ArrayList<>();
@@ -227,7 +235,7 @@ public class ArangoDBAsync extends InternalArangoDB<ArangoExecutorAsync, Complet
 		}
 
 		public Builder registerJsonDeserializer(final ValueType type, final VPackJsonDeserializer deserializer) {
-			vpackParser.registerDeserializer(type, deserializer);
+			vpackParserBuilder.registerDeserializer(type, deserializer);
 			return this;
 		}
 
@@ -235,12 +243,12 @@ public class ArangoDBAsync extends InternalArangoDB<ArangoExecutorAsync, Complet
 			final String attribute,
 			final ValueType type,
 			final VPackJsonDeserializer deserializer) {
-			vpackParser.registerDeserializer(attribute, type, deserializer);
+			vpackParserBuilder.registerDeserializer(attribute, type, deserializer);
 			return this;
 		}
 
 		public <T> Builder registerJsonSerializer(final Class<T> clazz, final VPackJsonSerializer<T> serializer) {
-			vpackParser.registerSerializer(clazz, serializer);
+			vpackParserBuilder.registerSerializer(clazz, serializer);
 			return this;
 		}
 
@@ -248,7 +256,7 @@ public class ArangoDBAsync extends InternalArangoDB<ArangoExecutorAsync, Complet
 			final String attribute,
 			final Class<T> clazz,
 			final VPackJsonSerializer<T> serializer) {
-			vpackParser.registerSerializer(attribute, clazz, serializer);
+			vpackParserBuilder.registerSerializer(attribute, clazz, serializer);
 			return this;
 		}
 
@@ -276,14 +284,32 @@ public class ArangoDBAsync extends InternalArangoDB<ArangoExecutorAsync, Complet
 			return this;
 		}
 
+		public Builder setSerializer(final ArangoSerializer serializer) {
+			this.serializer = serializer;
+			return this;
+		}
+
+		public Builder setDeserializer(final ArangoDeserializer deserializer) {
+			this.deserializer = deserializer;
+			return this;
+		}
+
 		public ArangoDBAsync build() {
 			if (hosts.isEmpty()) {
 				hosts.add(host);
 			}
+			final VPack vpacker = vpackBuilder.build();
+			final VPack vpackerNull = vpackBuilder.serializeNullValues(true).build();
+			final VPackParser vpackParser = vpackParserBuilder.build();
+			if (serializer == null) {
+				serializer = new ArangoSerializerImpl(vpacker, vpackerNull, vpackParser);
+			}
+			if (deserializer == null) {
+				deserializer = new ArangoDeserializerImpl(vpackerNull, vpackParser);
+			}
 			final HostHandler hostHandler = new DefaultHostHandler(hosts);
-			return new ArangoDBAsync(asyncBuilder(hostHandler), vpackBuilder.build(),
-					vpackBuilder.serializeNullValues(true).build(), vpackParser.build(), collectionCache,
-					syncBuilder(hostHandler));
+			return new ArangoDBAsync(asyncBuilder(hostHandler), new ArangoUtilImpl(serializer, deserializer),
+					collectionCache, syncBuilder(hostHandler));
 		}
 
 		private CommunicationAsync.Builder asyncBuilder(final HostHandler hostHandler) {
@@ -298,17 +324,15 @@ public class ArangoDBAsync extends InternalArangoDB<ArangoExecutorAsync, Complet
 
 	}
 
-	public ArangoDBAsync(final CommunicationAsync.Builder commBuilder, final VPack vpack, final VPack vpackNull,
-		final VPackParser vpackParser, final CollectionCache collectionCache,
-		final CommunicationSync.Builder syncbuilder) {
-		super(new ArangoExecutorAsync(commBuilder.build(vpack, collectionCache), vpack, vpackNull, vpackParser,
-				new DocumentCache(), collectionCache));
-		final Communication<Response, ConnectionSync> cacheCom = syncbuilder.build(vpack, collectionCache);
+	public ArangoDBAsync(final CommunicationAsync.Builder commBuilder, final ArangoUtil util,
+		final CollectionCache collectionCache, final CommunicationSync.Builder syncbuilder) {
+		super(new ArangoExecutorAsync(commBuilder.build(util, collectionCache), util, new DocumentCache(),
+				collectionCache));
+		final Communication<Response, ConnectionSync> cacheCom = syncbuilder.build(util, collectionCache);
 		collectionCache.init(new DBAccess() {
 			@Override
 			public ArangoDatabase db(final String name) {
-				return new ArangoDatabase(cacheCom, vpackNull, vpack, vpackParser, executor.documentCache(), null,
-						name);
+				return new ArangoDatabase(cacheCom, util, executor.documentCache(), null, name);
 			}
 		});
 	}
