@@ -56,9 +56,8 @@ import com.arangodb.model.DocumentReadOptions;
 import com.arangodb.model.GraphCreateOptions;
 import com.arangodb.model.TransactionOptions;
 import com.arangodb.model.TraversalOptions;
+import com.arangodb.util.ArangoUtil;
 import com.arangodb.velocypack.Type;
-import com.arangodb.velocypack.VPack;
-import com.arangodb.velocypack.VPackParser;
 import com.arangodb.velocystream.Request;
 import com.arangodb.velocystream.Response;
 
@@ -73,11 +72,9 @@ public class ArangoDatabaseAsync extends
 		super(arangoDB, arangoDB.executor(), name);
 	}
 
-	protected ArangoDatabaseAsync(final CommunicationAsync communication, final VPack vpacker, final VPack vpackerNull,
-		final VPackParser vpackParser, final DocumentCache documentCache, final CollectionCache collectionCache,
-		final String name) {
-		super(null, new ArangoExecutorAsync(communication, vpacker, vpackerNull, vpackParser, documentCache,
-				collectionCache), name);
+	protected ArangoDatabaseAsync(final CommunicationAsync communication, final ArangoUtil util,
+		final DocumentCache documentCache, final CollectionCache collectionCache, final String name) {
+		super(null, new ArangoExecutorAsync(communication, util, documentCache, collectionCache), name);
 	}
 
 	/**
